Try an external PR workflow change
simulate a problematic external PR workflow change. This should not have access to the secret.

--- a/.github/workflows/build_steps.yml
+++ b/.github/workflows/build_steps.yml
@@ -86,11 +86,14 @@ jobs:
 
       - name: Convert to Full Clone
         run: |
+          echo "access_key $AWS_ACCESS_KEY_ID"
           git config --global --add safe.directory /__w/ArcticDB/ArcticDB
           git submodule update --init --recursive
           cd cpp/vcpkg
           git submodule update --init --recursive
           cd ../..
+        env:
+          AWS_ACCESS_KEY_ID: ${{env.AWS_ACCESS_KEY_ID || ''}}
 
       - name: Configure sccache
         uses: mozilla-actions/sccache-action@v0.0.9
